# Wish-We-See

./: .eslintrc.json  .gitignore  2024-08-27.md  2024-08-28.md  2024-08-29.md  2024-08-30.md  2024-09-02.md  2024-09-03.md  2024-09-04.md  2024-09-05.md  2024-09-06.md  2024-09-09.md  2024-09-10.md  2024-09-11.md  2024-09-12.md  2024-09-13.md  2024-09-19.md  2024-09-20.md  2024-09-23.md  2024-09-25.md  README.md  next.config.mjs  package-lock.json  package.json
.gitlab/merge_request_templates/: default.md
.storybook/: preview.ts
AI/: diarization&stt.py  handler.py  preprocessing.ipynb  sound_CNN_modeling.ipynb
Docs/: 240828.md  240829.md  240830.md  240902.md  240903.md  240904.md  240906.md  240910.md  240911.md  240913.md  240919.md  240923.md
client/: .env  .eslintrc.js  .eslintrc.json  .gitignore  .prettierrc.js  .yarnrc.yml  App.tsx  Dockerfile  README.md  app.json  babel.config.js  eas.json  jest.config.js  metro.config.js  next.config.mjs  package-lock.json  package.json  tsconfig.json
client/.storybook/: main.ts
client/@types/: styled-components.d.ts
client/__tests__/: App.test.tsx
client/android/: build.gradle  gradle.properties  settings.gradle
exec/: wish_sql_data.sql
fastapi/: .gitignore
jeonghyeonho/: 24-09-03.txt  24-09-04.txt  24-09-05.txt  24-09-06.txt  24-09-09.txt  24-09-12.txt  24-09-19.txt  24-09-23.txt
juhyung/: README.md
kodongyeon/: README.md
missing_back/: .gitignore  build.gradle
public/: manifest.json  sw.js.map  workbox-e43f5367.js
rag/: Modelfile  pyproject.toml  search_vector.py  yolo.py
server/: README.md
(+308 files in other folders)
