[tool.poetry]
name = "rag-toy-1"
version = "0.1.0"
description = ""
authors = ["heiness <hybrid417@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.42.0"
streamlit = "^1.37.1"
pinecone-client = "^5.0.1"
huggingface-hub = "^0.24.6"
langchain = "^0.2.14"
langchain-community = "^0.2.12"
langserve = {extras = ["all"], version = "^0.2.2"}
langchain-cli = "^0.0.30"
pinecone = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
